nowrap at tabs-component; fixed bug in datagrid

--- a/scss/modules/tabs.scss
+++ b/scss/modules/tabs.scss
@@ -10,6 +10,7 @@
         padding: 0;
         margin: 0;
         border-bottom: 2px solid $grayLighter;
+        white-space: nowrap;
 
         li {
             display: inline;
